--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "mongodb": "3.0.4",
+    "mongodb": "^3.0.4",
     "mongoose": "^5.0.11"
+  },
+  "devDependencies": {
+    "expect": "^23.0.0-alpha.0",
+    "mocha": "^5.0.4",
+    "nodemon": "^1.17.2",
+    "supertest": "^3.0.0"
   }
 }
